exports[`<Filters /> matches previous snapshot 1`] = `
<div>
  <section
    className="filters">
    <div
      className="row">
      <div
        className="col-xs-12">
        <span
          className="form-group-title">
          Filter
        </span>
      </div>
      <div
        className="col-md-4 col-xs-12">
        <div
          className="form-group">
          <div>
            <label
              htmlFor="category-filter">
              Category
            </label>
            <select
              className="form-control"
              id="category-filter"
              onChange={[Function anonymous]}
              selected={undefined} />
          </div>
        </div>
      </div>
      <div
        className="col-md-4 col-xs-12">
        <div
          className="form-group">
          <div>
            <label
              htmlFor="segment-filter">
              Segment
            </label>
            <select
              className="form-control"
              id="segment-filter"
              onChange={[Function anonymous]}
              selected={undefined} />
          </div>
        </div>
      </div>
      <div
        className="col-md-4 col-xs-12">
        <div
          className="form-group">
          <div>
            <label
              htmlFor="platform-filter">
              Platform
            </label>
            <select
              className="form-control"
              id="platform-filter"
              onChange={[Function anonymous]}
              selected={undefined} />
          </div>
        </div>
      </div>
      <button
        className="btn fn-primary reset-filters-button"
        onClick={[Function anonymous]}>
        Reset Filters
      </button>
    </div>
  </section>
</div>
`;

exports[`<Filters /> matches previous snapshot 2`] = `
<div>
  <section
    className="filters">
    <div
      className="row">
      <div
        className="col-xs-12">
        <span
          className="form-group-title">
          Filter
        </span>
      </div>
      <div
        className="col-md-4 col-xs-12">
        <div
          className="form-group">
          <div>
            <label
              htmlFor="category-filter">
              Category
            </label>
            <select
              className="form-control"
              id="category-filter"
              onChange={[Function anonymous]}
              selected={undefined}>
              <option
                value="value1">
                title1
              </option>
              <option
                value="value2">
                title2
              </option>
            </select>
          </div>
        </div>
      </div>
      <div
        className="col-md-4 col-xs-12">
        <div
          className="form-group">
          <div>
            <label
              htmlFor="segment-filter">
              Segment
            </label>
            <select
              className="form-control"
              id="segment-filter"
              onChange={[Function anonymous]}
              selected={undefined} />
          </div>
        </div>
      </div>
      <div
        className="col-md-4 col-xs-12">
        <div
          className="form-group">
          <div>
            <label
              htmlFor="platform-filter">
              Platform
            </label>
            <select
              className="form-control"
              id="platform-filter"
              onChange={[Function anonymous]}
              selected={undefined} />
          </div>
        </div>
      </div>
      <button
        className="btn fn-primary reset-filters-button"
        onClick={[Function anonymous]}>
        Reset Filters
      </button>
    </div>
  </section>
</div>
`;

exports[`<Filters /> matches previous snapshot 3`] = `
<div>
  <section
    className="filters">
    <div
      className="row">
      <div
        className="col-xs-12">
        <span
          className="form-group-title">
          Filter
        </span>
      </div>
      <div
        className="col-md-4 col-xs-12">
        <div
          className="form-group">
          <div>
            <label
              htmlFor="category-filter">
              Category
            </label>
            <select
              className="form-control"
              id="category-filter"
              onChange={[Function anonymous]}
              selected={undefined}>
              <option
                value="value1">
                title1
              </option>
              <option
                value="value2">
                title2
              </option>
            </select>
          </div>
        </div>
      </div>
      <div
        className="col-md-4 col-xs-12">
        <div
          className="form-group">
          <div>
            <label
              htmlFor="segment-filter">
              Segment
            </label>
            <select
              className="form-control"
              id="segment-filter"
              onChange={[Function anonymous]}
              selected={undefined}>
              <option
                value="value1">
                title1
              </option>
              <option
                value="value2">
                title2
              </option>
            </select>
          </div>
        </div>
      </div>
      <div
        className="col-md-4 col-xs-12">
        <div
          className="form-group">
          <div>
            <label
              htmlFor="platform-filter">
              Platform
            </label>
            <select
              className="form-control"
              id="platform-filter"
              onChange={[Function anonymous]}
              selected={undefined} />
          </div>
        </div>
      </div>
      <button
        className="btn fn-primary reset-filters-button"
        onClick={[Function anonymous]}>
        Reset Filters
      </button>
    </div>
  </section>
</div>
`;

exports[`<Filters /> matches previous snapshot 4`] = `
<div>
  <section
    className="filters">
    <div
      className="row">
      <div
        className="col-xs-12">
        <span
          className="form-group-title">
          Filter
        </span>
      </div>
      <div
        className="col-md-4 col-xs-12">
        <div
          className="form-group">
          <div>
            <label
              htmlFor="category-filter">
              Category
            </label>
            <select
              className="form-control"
              id="category-filter"
              onChange={[Function anonymous]}
              selected={undefined}>
              <option
                value="value1">
                title1
              </option>
              <option
                value="value2">
                title2
              </option>
            </select>
          </div>
        </div>
      </div>
      <div
        className="col-md-4 col-xs-12">
        <div
          className="form-group">
          <div>
            <label
              htmlFor="segment-filter">
              Segment
            </label>
            <select
              className="form-control"
              id="segment-filter"
              onChange={[Function anonymous]}
              selected={undefined}>
              <option
                value="value1">
                title1
              </option>
              <option
                value="value2">
                title2
              </option>
            </select>
          </div>
        </div>
      </div>
      <div
        className="col-md-4 col-xs-12">
        <div
          className="form-group">
          <div>
            <label
              htmlFor="platform-filter">
              Platform
            </label>
            <select
              className="form-control"
              id="platform-filter"
              onChange={[Function anonymous]}
              selected={undefined}>
              <option
                value="value1">
                title1
              </option>
              <option
                value="value2">
                title2
              </option>
            </select>
          </div>
        </div>
      </div>
      <button
        className="btn fn-primary reset-filters-button"
        onClick={[Function anonymous]}>
        Reset Filters
      </button>
    </div>
  </section>
</div>
`;
